Bug 40491 - [4.5 Regression] Revision 148663 caused extra failures
Summary: [4.5 Regression] Revision 148663 caused extra failures
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: testsuite (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: 4.5.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-19 03:05 UTC by H.J. Lu
Modified: 2009-06-19 14:27 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2009-06-19 13:58:12


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2009-06-19 03:05:09 UTC
On Linux/ia32, revision 148663:

http://gcc.gnu.org/ml/gcc-cvs/2009-06/msg00646.html

caused:

FAIL: gcc.dg/20080522-1.c (test for excess errors)
FAIL: gcc.dg/20080528-1.c (test for excess errors)
Comment 1 Richard Biener 2009-06-19 11:35:54 UTC
What are the excess errors?
Comment 2 Uroš Bizjak 2009-06-19 13:58:12 UTC
(In reply to comment #1)
> What are the excess errors?
> 

Executing on host: /home/uros/gcc-build/gcc/xgcc -B/home/uros/gcc-build/gcc/ /home/uros/gcc-svn/trunk/gcc/testsuite/gcc.dg/20080522-1.c    -ansi -pedantic-errors -S  -o 20080522-1.s    (timeout = 300)
/home/uros/gcc-svn/trunk/gcc/testsuite/gcc.dg/20080522-1.c:1:0: error: ISO C forbids an empty translation unit

compiler exited with status 1
output is:
/home/uros/gcc-svn/trunk/gcc/testsuite/gcc.dg/20080522-1.c:1:0: error: ISO C forbids an empty translation unit


FAIL: gcc.dg/20080522-1.c (test for excess errors)
Excess errors:
/home/uros/gcc-svn/trunk/gcc/testsuite/gcc.dg/20080522-1.c:1:0: error: ISO C forbids an empty translation unit

Executing on host: /home/uros/gcc-build/gcc/xgcc -B/home/uros/gcc-build/gcc/ /home/uros/gcc-svn/trunk/gcc/testsuite/gcc.dg/20080528-1.c    -ansi -pedantic-errors -S  -o 20080528-1.s    (timeout = 300)
/home/uros/gcc-svn/trunk/gcc/testsuite/gcc.dg/20080528-1.c:1:0: error: ISO C forbids an empty translation unit

compiler exited with status 1
output is:
/home/uros/gcc-svn/trunk/gcc/testsuite/gcc.dg/20080528-1.c:1:0: error: ISO C forbids an empty translation unit


FAIL: gcc.dg/20080528-1.c (test for excess errors)
Excess errors:
/home/uros/gcc-svn/trunk/gcc/testsuite/gcc.dg/20080528-1.c:1:0: error: ISO C forbids an empty translation unit

Comment 3 Uroš Bizjak 2009-06-19 14:09:41 UTC
Ah, they are truncated instead of removed:

------------------------------------------------------------------------
r148664 | razya | 2009-06-18 18:08:00 +0200 (Thu, 18 Jun 2009) | 2 lines

see removal

----

I'll take care of that.
Comment 4 Dominique d'Humieres 2009-06-19 14:18:50 UTC
> Ah, they are truncated instead of removed:

The same is true for at least gcc/see.c.
Comment 5 uros 2009-06-19 14:22:34 UTC
Subject: Bug 40491

Author: uros
Date: Fri Jun 19 14:22:16 2009
New Revision: 148705

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=148705
Log:
	* optabs.h (enum optab_index): Add new OTI_significand.
	(significand_optab): Define corresponding macro.
	* optabs.c (init_optabs): Initialize significand_optab.
	* genopinit.c (optabs): Implement significand_optab using
	significand?f2 patterns.
	* builtins.c (expand_builtin_mathfn): Handle
	BUILT_IN_SIGNIFICAND{,F,L}.
	(expand_builtin): Expand BUILT_IN_SIGNIFICAND{,F,L} using
	expand_builtin_mathfn if flag_unsafe_math_optimizations is set.

	* config/i386/i386.md (significandxf2, significand<mode>2): New
	expanders to implement significandf, significand and significandl
	built-ins as inline x87 intrinsics.

testsuite/ChangeLog:

	* gcc.dg/builtins-34.c: Add significand cases.

	PR testsuite/40491
	* testsuite/gcc.dg/20080522-1.c: Remove testcase for real.
	* testsuite/gcc.dg/20080528-1.c: Ditto.


Removed:
    trunk/gcc/testsuite/gcc.dg/20080522-1.c
    trunk/gcc/testsuite/gcc.dg/20080528-1.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/builtins.c
    trunk/gcc/config/i386/i386.md
    trunk/gcc/genopinit.c
    trunk/gcc/optabs.c
    trunk/gcc/optabs.h
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/testsuite/gcc.dg/builtins-34.c

Comment 6 Uroš Bizjak 2009-06-19 14:27:27 UTC
(In reply to comment #4)
> > Ah, they are truncated instead of removed:
> 
> The same is true for at least gcc/see.c.

I have removed this file as well in a follow-up commit.

Fixed.